Bug 336785 r=darin sr+a=bryner Crash when context menu pops up